# Risk-Management-Kelly-Criterion-Simulator

./: README.md
qk-sims/: .gitignore  README.md  main.py  package-lock.json  package.json  render.yaml  start-server.bat  start-server.ps1  vercel.json
qk-sims/src/app/: globals.css  layout.tsx  page.tsx
qk-sims/src/app/scenario-simulator/: page.tsx
qk-sims/src/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
